--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ TODO.md
 problems/getServer.js
 .env
 problem_maker
+
+
+# Ignore all folders inside /problems/
+problems/*/
+
+# Allow files inside /problems/
+!problems/*.*
+!problems/1._Test
+!problems/2._Lendrick_Kamar
+!problems/3._W_or_L
