--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "body-parser": "^1.20.3",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "disposable-email-domains": "^1.0.62",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-rate-limit": "^8.0.1",
+    "express-slow-down": "^3.0.0",
     "fs": "^0.0.1-security",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongod": "^2.0.0",
     "mongoose": "^8.13.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "clean-jsdoc-theme": "^4.3.0",
