--- a/package.json
+++ b/package.json
@@ -1,43 +1,64 @@
 {
-  "name": "levis-judex",
-  "version": "0.4.2",
-  "description": "Self-hosted platform running on Express.js (prettified with tailwind css) for creating contests/problems like codeforces & usaco.org that uses ioi's isolate software to sandbox submissions.",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "docs": "jsdoc -r src/ -c jsdoc.json"
-  },
-  "keywords": [],
-  "author": "Code Joint (https://codejoint.org)",
-  "license": "GPL-3.0-only",
-  "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.3",
-    "child_process": "^1.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "disposable-email-domains": "^1.0.62",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1",
-    "express-rate-limit": "^8.0.1",
-    "express-slow-down": "^3.0.0",
-    "fs": "^0.0.1-security",
-    "helmet": "^7.1.0",
-    "jsdom": "^26.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongod": "^2.0.0",
-    "mongoose": "^8.13.0",
-    "nodemailer": "^6.10.0",
-    "validator": "^13.15.15"
-  },
-  "devDependencies": {
-    "clean-jsdoc-theme": "^4.3.0",
-    "eslint": "^9.35.0",
-    "eslint-plugin-perfectionist": "^4.15.0",
-    "jsdoc": "^4.0.4",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.6.2"
-  }
+    "name": "levis-judex",
+    "version": "0.5.0",
+    "description": "Self-hosted platform running on Express.js (prettified with tailwind css) for creating contests/problems like codeforces & usaco.org that uses ioi's isolate software to sandbox submissions.",
+    "main": "src/index.ts",
+    "scripts": {
+        "dev": "tsx --watch --env-file .env src/index.ts",
+        "docs": "npx typedoc",
+        "build": "tsc",
+        "start": "npm run build && node --env-file .env dist/index.js",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix .",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Code Joint (https://codejoint.org)",
+    "license": "GPL-3.0-only",
+    "dependencies": {
+        "bcryptjs": "^3.0.2",
+        "body-parser": "^1.20.3",
+        "child_process": "^1.0.2",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "disposable-email-domains": "^1.0.62",
+        "dotenv": "^16.4.7",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "express-ejs-layouts": "^2.5.1",
+        "express-rate-limit": "^8.0.1",
+        "express-slow-down": "^3.0.0",
+        "fs": "^0.0.1-security",
+        "helmet": "^7.1.0",
+        "jsdom": "^26.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongod": "^2.0.0",
+        "mongoose": "^8.13.0",
+        "nodemailer": "^6.10.0",
+        "validator": "^13.15.15"
+    },
+    "devDependencies": {
+        "@tsconfig/node22": "^22.0.2",
+        "@types/body-parser": "^1.19.6",
+        "@types/cookie-parser": "^1.4.9",
+        "@types/cors": "^2.8.19",
+        "@types/ejs": "^3.1.5",
+        "@types/express": "^5.0.3",
+        "@types/express-ejs-layouts": "^2.5.4",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.6.2",
+        "@types/nodemailer": "^7.0.2",
+        "@types/validator": "^13.15.3",
+        "eslint": "^9.35.0",
+        "eslint-plugin-perfectionist": "^4.15.0",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.6.2",
+        "tsx": "^4.20.6",
+        "typedoc": "^0.28.13",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.45.0"
+    }
 }
