--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/express": "^5.0.3",
         "@types/express-ejs-layouts": "^2.5.4",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/mongoose": "^5.11.96",
         "@types/node": "^24.6.2",
         "@types/nodemailer": "^7.0.2",
         "@types/validator": "^13.15.3",
